Updating main client page to add locationProvider

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -33,6 +33,7 @@
 
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
    <script src="javascripts/sidr/jquery.sidr.min.js"></script>
+   <script src="javascripts/locationProvider.js"></script>
 
 
 	<!-- Favicons
