Adding distance node around numeric value to allow countdown more easily.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -83,7 +83,7 @@
 
 
     <div id="distance-countdown">
-    <span id="distance-number">500m</span><p>to go</p>
+    <span id="distance-number"><span id="distance">500</span>m</span><p>to go</p>
     </div>
 
     <div id="drone-video-stream">
