Shrinking the ginormous video.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -86,8 +86,8 @@
     <span id="distance-number"><span id="distance">500</span>m</span><p>to go</p>
     </div>
 
-    <div id="drone-video-stream">
-    <video src="videos/drone.mp4" autoplay="autoplay" loop="loop">
+    <div id="drone-video-stream" style="text-align: center;">
+    <video src="videos/drone.mp4" autoplay="autoplay" loop="loop" style="width: 320px; height: 180px;">
     </div>
 
 	</div><!-- container -->
